welcome.lessons.welcome.variables.RunFour.scala.error
RunFour:3: error: not found: value est
  if (est sur Biscuit()) {nbBiscuit = nbBiscuit+1};} 
      ^RunFour:3: error: not found: value Biscuit
  if (est sur Biscuit()) {nbBiscuit = nbBiscuit+1};} 
              ^