welcome.lessons.welcome.variables.RunFour.scala.code
var nbBiscuit : Int = 0
while (nbBiscuit < 4) { avance() ;
  if (est sur Biscuit()) {nbBiscuit = nbBiscuit+1};}